--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,3 +31,25 @@ jobs:
           python3 -m venv .venv
           source .venv/bin/activate
           pip install -r requirements.txt
+
+  test:
+    needs: build
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+      # Runs a set of commands using the runners shell
+      - name: Flake8
+        run: |
+          pip install flake8
+          flake8 --exclude='.venv' --extend-ignore=E501
+
+      # Runs a set of commands using the runners shell
+      - name: Pytest
+        run: |
+          pip install pytest-cov
+          python -m pytest --doctest-modules --ignore=main.py --cov
