--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,3 +53,15 @@ jobs:
         run: |
           pip install pytest-cov
           python -m pytest --doctest-modules --ignore=main.py --cov
+
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Deploy to Heroku
+        uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_email: "heroku@viviengiraud.fr"
+          heroku_app_name: "excelia-exo1"
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
