--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,25 @@
+attrs==21.4.0
+beautifulsoup4==4.10.0
 bottle==0.12.19
+bs4==0.0.1
+cfgv==3.3.1
+coverage==6.3.2
+distlib==0.3.4
+filelock==3.6.0
+identify==2.4.12
+iniconfig==1.1.1
+nodeenv==1.6.0
+packaging==21.3
+platformdirs==2.5.1
+pluggy==1.0.0
+pre-commit==2.18.1
+py==1.11.0
+pyparsing==3.0.7
+pytest==7.1.0
+pytest-cov==3.0.0
+PyYAML==6.0
+six==1.16.0
+soupsieve==2.3.1
+toml==0.10.2
+tomli==2.0.1
+virtualenv==20.14.0
